# reactor

./: .env.example  .eslintrc.cjs  .gitignore  README.md  docker-compose.cache.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh  starship.toml
.github/workflows/: cd.yml  ci.yml  deploy-gh-pages.yml
backend/: Dockerfile  requirements.txt
frontend/: Dockerfile  package.json
frontend/pages/: client.tsx  index.tsx  static.tsx
scripts/: db-migrate.sh  db-seed.sh  deploy-gh-pages.sh  release.sh
src/frontend/: package.json  pnpm-lock.yaml
src/frontend/app/: page.tsx
supabase/: seed.sql  seed.yaml
supabase/migrations/: 100-init.sql
tests/: conftest.py
tests/backend/: test_health.py
